--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.44.2",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "outline": "^0.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
