--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.17.13",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
@@ -18,16 +19,22 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@next-auth/supabase-adapter": "^0.2.1",
     "@supabase/supabase-js": "^2.44.2",
-    "next": "14.2.4",
+    "elasticsearch": "^16.7.3",
+    "esmain": "github:elastic/elasticsearch-js",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "outline": "^0.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "styled-components": "^6.1.11"
+    "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.11",
+    "timer-promise": "^0.0.2",
+    "timers-browserify": "^2.0.12"
   },
   "devDependencies": {
+    "@types/node": "^20.14.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
