--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^7.17.13",
+    "@elastic/elasticsearch": "^7.17.14",
+    "@elastic/search-ui-elasticsearch-connector": "^1.21.5",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
