--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-speech-recognition": "^3.10.0",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11",
     "timer-promise": "^0.0.2",
